--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,12 @@
 
 @import "base";
 @import "grid";
+
+@import "navigation";
+@import "posts";
+
 @import "tiles";
+@import "features";
 
 @import "colors";
 @import "components";
