--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,6 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 ::selection {
-  color: lighten($color, 10%);
-  background: lighten($background, 5%);
+  color: lighten($background, 10%);
+  background: lighten($color, 20%);
 }
 
 body {
@@ -9,17 +13,17 @@ body {
   background: $background;
   color: $color;
   font-family: $body-font;
-  font-size: 16px;
+  font-size: 18px;
   margin: 0 auto;
-  // padding: 2em;
-  max-width: $content-width;
-  @include media-query($on-phone) {
-    padding: 1.5em 1em;
-  }
 }
 
 img#welcome {
   vertical-align: sub;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 h1, h2, h3, h4 {
@@ -28,7 +32,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 h2 {
@@ -36,7 +40,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 h1 svg {
@@ -48,7 +52,7 @@ h4 {
 }
 
 p {
-  max-width: $content-width*.69;
+  max-width: $content-width;
   line-height: 1.5em;
 
   &.lead {
