--- a/_sass/tiles.scss
+++ b/_sass/tiles.scss
@@ -15,9 +15,8 @@ tiles {
     box-shadow: 0px 10px 20px lightgray;
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.05' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
     transition: transform 150ms ease-in, box-shadow 150ms linear;
-    h3 {
+    h3, h2 {
       align-self: flex-end;
-      font-size: 24px;
       margin: 0;
       text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5); // , 0 2px 2px rgba(0, 0, 0, 0.55);
       span {
@@ -31,13 +30,30 @@ tiles {
         transition: background 450ms ease;
         transform: translateZ(0px);
         padding-right: .5ch;
+        &:after {
+          position: absolute;
+          bottom: 0;
+          left: 100%;
+          content: '→';
+          opacity: 0;
+          transform: translateX(0px);
+          text-shadow: 0 0 10px rgba(50,50,50,.5);
+        }
       }
+    }
+    h3 {
+      font-size: 24px;
     }
     &:hover {
       transform: translateY(-2px);
       box-shadow: 0px 10px 20px darken(lightgray, 10%);
       h3 span {
         background-position: -100%;
+        &:after {
+          transition: opacity 250ms linear 200ms, transform 250ms ease 200ms;
+          opacity: 1;
+          transform: translateX(.5ch);
+        }
       }
     }
   }
