--- a/_sass/features.scss
+++ b/_sass/features.scss
@@ -24,9 +24,10 @@
       border-radius: $border-radius*3;
       margin-right: 0;
       margin-bottom: 0;
-      transition: all 400ms ease;
+      transition: border-color 400ms ease;
       &:hover {
         border-color: white;
+        transform: none;
       }
     }
   }
