--- a/_sass/tiles.scss
+++ b/_sass/tiles.scss
@@ -15,6 +15,10 @@ tiles {
     box-shadow: 0px 10px 20px lightgray;
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.05' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
     transition: transform 150ms ease-in, box-shadow 150ms linear;
+    @include media-query($on-tablet) {
+      // margin-left: 0!important;
+      // margin-top: 0!important;
+    }
     h3, h2 {
       align-self: flex-end;
       margin: 0;
@@ -40,9 +44,6 @@ tiles {
           text-shadow: 0 0 10px rgba(50,50,50,.5);
         }
       }
-    }
-    h3 {
-      font-size: 24px;
     }
     &:hover {
       transform: translateY(-2px);
