--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -13,6 +13,7 @@ $border-radius: 8px;
 /* Fonts */
 $header-font: "Basic Sans", basic-sans, "Helvetica Neue", helvetica, arial, sans-serif;
 $body-font: "Tisa Pro", ff-tisa-web-pro, basic-sans, "Helvetica Neue", helvetica, arial, sans-serif;
+$font-size: 18px;
 
 /* Colors */
 $background: #f2f2f2;
