--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,5 +1,9 @@
 <span class="reading-time" title="Estimated read time">
-  {% assign words = content | number_of_words %}
+  {% if include.content %}
+    {% assign words = include.content | number_of_words %}
+  {% else %}
+    {% assign words = content | number_of_words %}
+  {% endif %}
   {% if words < 360 %}
     1 min
   {% else %}
