--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -13,7 +13,7 @@ body {
   background: $background;
   color: $color;
   font-family: $body-font;
-  font-size: 18px;
+  font-size: $font-size;
   margin: 0 auto;
 }
 
@@ -33,10 +33,16 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 3.5rem;
+  @include media-query($on-tablet) {
+    font-size: 2.5rem;
+  }
 }
 
 h2 {
   font-size: 2rem;
+  @include media-query($on-tablet) {
+    font-size: 1.8rem;
+  }
 }
 
 h3 {
@@ -57,6 +63,10 @@ p {
 
   &.lead {
     font-size: 1.5rem;
+
+    @include media-query($on-tablet) {
+      font-size: 1.25rem;
+    }
   }
 }
 
