--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,11 +1,14 @@
 nav {
   position: absolute;
   z-index: 420;
-  padding: 2em 0;
+  padding: 2rem 0;
+  @include media-query($on-tablet) {
+    padding: 1rem;
+  }
   @include media-query($on-phone) {
     position: relative;
     background: $color;
-    padding: 1em 0 .5em;
+    padding: 1rem 0 .5rem;
     text-align: center;
   }
 }
