--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,18 @@
     <!-- i know i'm a javascript developer, but i forgot to use it for some reason... -->
     <!-- <script src="/script.js" defer></script> -->
 
-    <!-- twitter card -->
+    <!-- zuckerberg card -->
+    <meta property="og:type" content="{% if page.image %}article{% else %}website{% endif %}">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:url" content="{{ page.url | prepend: site.domain }">
+    {% if page.image %}
+    <meta property="og:image" content="{{ page.image | prepend: page.url | prepend: site.domain }">
+    <meta property="og:article:author" content="Melody Starling">
+    <meta property="og:article:published_time" content="{{ page.date }">
+    {% endif %}
+
+    <!-- @jack card -->
     <meta name="twitter:card" content="{% if page.image %}summary_large_image{% else %}summary{% endif %}">
     <meta name="twitter:site" content="@pixelyunicorn">
     <meta name="twitter:creator" content="@pixelyunicorn">
@@ -23,6 +34,7 @@
     <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
     {% if page.image %}
     <meta name="twitter:image:src" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
+    <meta name="twitter:image:alt" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     {% endif %}
   </head>
   <body>
