--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:url" content="{{ page.url | prepend: site.domain }}">
     {% if page.image %}
-    <meta property="og:image" content="{{ page.image | prepend: page.url | prepend: site.domain }">
+    <meta property="og:image" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
     <meta property="og:article:author" content="Melody Starling">
-    <meta property="og:article:published_time" content="{{ page.date }">
+    <meta property="og:article:published_time" content="{{ page.date }}">
     {% endif %}
 
     <!-- @jack card -->
