--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -49,10 +49,6 @@ h3 {
   font-size: 1.5rem;
 }
 
-h1 svg {
-  vertical-align: sub;
-}
-
 h4 {
   margin-bottom: 1rem;
 }
@@ -71,7 +67,7 @@ p {
 }
 
 svg {
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 hr {
