--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
           <h1>{{ page.title }}</h1>
         </tile>
       </tiles>
-      <p class="metadata">
+      <p class="metadata feature-above">
         {% unless page.hidden %}Published {{ page.date | date: "%B %-d, %Y" }} •{% endunless %}
         {% include read-time.html %} read
       </p>
@@ -69,10 +69,12 @@ layout: default
     <p>
       Melody is a web developer, designer, and community event organizer based in Philly. You can find them on Twitter at <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> @pixelyunicorn </a>.
     </p>
-    <h3>Share</h3>
+    <h3>Tags &amp; Sharing</h3>
     <p>
-      <a id="share-twitter" href="http://twitter.com/share?text={{ page.title }}&url={{ page.url | prepend: site.domain }}&via=pixelyunicorn&hashtags={% for tag in page.tags %}{{ tag }},{% endfor %}" target="_blank" class="button uno"><img src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>
+      {% for tag in page.tags %}<a href="/hashtag/{{ tag }}" class="button uno" >#{{ tag }}</a>{% endfor %}
+      <br>
       <a id="share-mastodon" href="#share-mastodon" onclick="share_on_mastodon('{{ page.title }}', '{{ page.url | prepend: site.domain }}', '{% for tag in page.tags %}#{{ tag }} {% endfor %}')" class="button uno"><img height="14" width="14" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mastodon.svg" /> Mastodon <noscript>(Please enable Javascript)</noscript></a>
+      <a id="share-twitter" href="http://twitter.com/share?text={{ page.title }}&url={{ page.url | prepend: site.domain }}&via=pixelyunicorn&hashtags={% for tag in page.tags %}{{ tag }},{% endfor %}" target="_blank" class="button uno"><img src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>
       <a id="edit-github" href="https://github.com/{{ site.github }}/blob/{{ site.branch }}/{{ page.path }}" target="_blank" class="button uno" ><img src="https://icon.now.sh/github/000" height="14" width="14" /> View on GitHub</a>
       <!-- <a id="edit-glitch" href="https://glitch.com/edit/#!/{{ site.glitch }}?path={{ page.path }}:1:0" target="_blank" class="button uno">🎏 Glitch</a> -->
     </p>
