--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -47,6 +47,7 @@ article {
 
 .construction {
   background: lighten($duo, 10%);
+  color: $color;
   padding: 1em;
   border-radius: $border-radius;
 }
