--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -9,7 +9,8 @@ container {
   margin-left: auto;
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
-
+  position: relative;
+  
   clear: both;
   box-sizing: content-box;
 
