theme change updates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,9 @@ layout: default
     {% endif %}
 </header>
 <section id="main">
+  <div class="hidden-tablet">
+    {% include toggle-theme.html %}
+  </div>
   <container width="content-width">
     <article>
       {% if page.draft == true %}
