--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -56,8 +56,8 @@ article {
 .toggle-themes {
   display: inline-block;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: .5rem;
+  top: 1rem;
   text-align: right;
 }
 body {
