--- a/_includes/toggle-theme.html
+++ b/_includes/toggle-theme.html
@@ -1,6 +1,6 @@
 <span class="toggle-themes hidden-phone">
-  <a href="#" onClick="toggle_theme('dark')" class="button uno toggle-theme-dark">{% include icons/idea-on.svg size="20" %} Change Theme <noscript>(JS required)</noscript></a>
-  <a href="#" onClick="toggle_theme('light')" class="button uno toggle-theme-light">{% include icons/idea-off.svg size="20" %} Change Theme <noscript>(JS required)</noscript></a>
+  <a onClick="toggle_theme('dark')" class="button uno toggle-theme-dark">{% include icons/idea-on.svg size="20" %} Change Theme <noscript>(JS required)</noscript></a>
+  <a onClick="toggle_theme('light')" class="button uno toggle-theme-light">{% include icons/idea-off.svg size="20" %} Change Theme <noscript>(JS required)</noscript></a>
   <br>
-  <a href="#" onClick="reset_theme()" class="button uno toggle-theme-reset">Reset <noscript>(JS required)</noscript></a>
+  <a onClick="reset_theme()" class="button uno toggle-theme-reset">Reset <noscript>(JS required)</noscript></a>
 </span>
