--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -6,6 +6,7 @@
   margin: 0 .5rem .5rem 0;
   padding: .25rem .5rem;
   text-decoration: none;
+  cursor: pointer;
   &:hover {
     filter: brightness(1.5) hue-rotate(15deg);
   }
