remove shadow on mobile dark theme

--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -40,6 +40,17 @@ blogroll {
     text-decoration: none;
   }
 }
+body.force-theme-dark {
+  blogroll > a {
+    box-shadow: none!important;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  blogroll > a {
+    box-shadow: none!important;
+  }
+}
+
 
 article {
   padding-top: 2em;
