Respectfully beg for money

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,6 +81,7 @@ layout: default
       <a id="edit-github" href="https://github.com/{{ site.github }}/blob/{{ site.branch }}/{{ page.path }}" target="_blank" class="button uno" ><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> View on GitHub</a>
       <a id="edit-glitch" href="https://glitch.com/edit/#!/{{ site.glitch }}?path={{ page.path }}:1:0" target="_blank" class="button uno"><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-day.svg" class="visible-theme-light" height="14" width="18"/><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-night.svg" class="visible-theme-dark" height="14" width="18"/> Remix on Glitch</a>
     </p>
+    {% include patreon-beg.html %}
     <h3>More Posts</h3>
     <p class="page-nav">
       {% if page.previous %}{% unless page.previous.hidden %}
