--- a/_includes/patreon-beg.html
+++ b/_includes/patreon-beg.html
@@ -1,7 +1,7 @@
 <blockquote id="patreon-beg">
   <h3 style="margin:0">Support my work!</h3>
   <p>
-    I would love to keep creating blogs posts, talks, and miscellaneous works of art, but these things take time and energy. That's where you come in! Support me on <strong>Patreon</strong> today and you'll get early access and a behind-the-scenes look at the exciting things I do! Your support means a lot to me!
+    I would love to keep creating blogs posts, talks, and art, but these things take time and energy. That's where you come in! Support me on <strong>Patreon</strong> today and you'll get early access and a behind-the-scenes look at the exciting things I do! Your support means a lot to me!
     <br><br>
     <a class="button" href="https://patreon.com/madebymelody" target="_blank" style="color:currentColor"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" alt="Patreon logo" width="16" height="16"> <strong>Become a Patron!</strong></a>
     <a class="button" onclick="hide_patreon()">Remind me in a few weeks <noscript>(JS required)</noscript></a>
