--- a/_includes/patreon-beg.html
+++ b/_includes/patreon-beg.html
@@ -1,5 +1,5 @@
 <blockquote id="patreon-beg">
-  <h3 style="margin:0">Support my work!</h3>
+  <h3>Support my work!</h3>
   <p>
     I would love to keep creating blogs posts, talks, and art, but these things take time and energy. That's where you come in! Support me on <strong>Patreon</strong> today and you'll get early access and a behind-the-scenes look at the exciting things I do! Your support means a lot to me!
     <br><br>
