--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -104,7 +104,7 @@ hr {
 
 blockquote {
   margin: 1em 0;
-  padding: 1em 1em 1px;
+  padding: 1px 1em;
   border-radius: 0;
   background: rgba(gray, .35);
   border-radius: $border-radius;
