--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <section id="main">
   <container>
+    {% include toggle-theme.html %}
     {{ content }}
   </container>
 </section>
