--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -1,9 +1,9 @@
 header {
   background: $color;
   color: $background;
-  padding: 1px 0; // fix IE layout issue
   text-align: center;
   text-shadow: 0 2px 6px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
   p {
     text-align: center;
     margin: 1em auto 2em;
