--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,12 +1,5 @@
+{% if include.content %}{% assign words = include.content | number_of_words %}
+{% else %}{% assign words = content | number_of_words %}{% endif %}
 <span class="reading-time" title="Estimated read time">
-  {% if include.content %}
-    {% assign words = include.content | number_of_words %}
-  {% else %}
-    {% assign words = content | number_of_words %}
-  {% endif %}
-  {% if words < 360 %}
-    1 min
-  {% else %}
-    {{ words | divided_by:180 }} mins
-  {% endif %}
+  {% if words < 360 %}1 min{% else %}{{ words | divided_by:180 }} mins{% endif %}
 </span>
