--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,17 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
 
+    <!-- general seo -->
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
+
     <!-- zuckerberg card -->
-    <meta property="og:type" content="{% if page.image %}article{% else %}website{% endif %}">
+    <meta property="og:type" content="{% if page.date %}article{% else %}website{% endif %}">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:url" content="{{ page.url | prepend: site.domain }}">
     {% if page.image %}
     <meta property="og:image" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
+    {% endif %}{% if page.date %}
     <meta property="og:article:author" content="Melody Starling">
     <meta property="og:article:published_time" content="{{ page.date }}">
     {% endif %}
@@ -35,11 +39,8 @@
     <meta name="twitter:image:src" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
     <meta name="twitter:image:alt" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     {% endif %}
-
-    <!-- various meta jawns -->
-    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
   </head>
-  <body class="page-{{ page.slug }} accent-{{ page.accent }}">
+  <body class="{% if page.slug %}page-{{ page.slug }} {% endif %}{% if page.accent %}accent-{{ page.accent }} {% endif %}">
     <span id="top"></span>
 {{ content }}
   </body>
