--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -38,6 +38,7 @@ blogroll {
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.05' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
     transition: transform 150ms ease-in, box-shadow 150ms linear;
     text-decoration: none;
+    color: white!important;
   }
 }
 body.force-theme-dark {
@@ -63,7 +64,20 @@ article {
   border-radius: $border-radius;
 }
 
-// Toggle theme
+// _includes/events.html
+ul.events-list {
+  padding-left: 0;
+  display: grid;
+  li {
+    list-style: none;
+    border: 2px solid currentColor;
+    border-radius: $border-radius;
+    padding: .5rem;
+    // margin-bottom: 1rem;
+  }
+}
+
+// _includes/toggle-theme.html
 .toggle-themes {
   display: inline-block;
   position: absolute;
