--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -119,7 +119,7 @@ body, body.force-theme-light {
   }
 }
 
-body.force-theme-dark {
+@include color-scheme (dark) {
   .hidden-theme-dark, .visible-theme-light {
     visibility: hidden;
     display: none;
@@ -127,18 +127,5 @@ body.force-theme-dark {
   .hidden-theme-light, .visible-theme-dark {
     visibility: visible;
     display: inherit;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    .hidden-theme-dark, .visible-theme-light {
-      visibility: hidden;
-      display: none;
-    }
-    .hidden-theme-light, .visible-theme-dark {
-      visibility: visible;
-      display: inherit;
-    }
   }
 }
