👑🍮 Updated with Glitch

--- a/glitch-editor.css
+++ b/glitch-editor.css
@@ -2,6 +2,10 @@
 /* Use at your own risk! */
 /* Paste this into Stylebot, and don't forget to flip dark theme on! */
 
+/* Import for Chrome OS */
+
+@import url("https://use.typekit.net/apw7exh.css");
+
 /* UI */
 
 body {
