update lofi talk, update images in quotes, etc etc

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -119,7 +119,7 @@ column, .column {
   flex-grow: 1;
   flex-basis: 0px;
   max-width: 100%;
-  margin-bottom: $spacing-unit / 2;
+  // margin-bottom: $spacing-unit / 2;
   padding-left: $spacing-unit / 2;
 }
 
