--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,16 +76,16 @@ layout: default
     <h3>About Melody</h3>
     <img src="/media/avatar.png" alt="Photo of Melody!" width="100" height="100" title="Melody's profile picture!" style="float: left; margin-right: 1ch"/>
     <p>
-      Melody is a web developer, designer, and community event organizer based in Philly. You can find them on Twitter at <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> @pixelyunicorn </a>.
+      Melody is a web developer, designer, and community event organizer based in Philly. You can find them on Twitter at <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> @pixelyunicorn </a>.
     </p>
     <h3>Tags &amp; Sharing</h3>
     <p>
       {% for tag in page.tags %}<a href="/hashtag/{{ tag }}" class="button uno" >#{{ tag }}</a>{% endfor %}
       <br>
       <a id="share-mastodon" href="#share-mastodon" onclick="share_on_mastodon('{{ page.title }}', '{{ page.url | prepend: site.domain }}', '{% for tag in page.tags %}#{{ tag }} {% endfor %}')" class="button uno"><img role="presentation" height="14" width="14" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mastodon.svg" /> Mastodon <noscript>(Please enable Javascript)</noscript></a>
-      <a id="share-twitter" href="http://twitter.com/share?text={{ page.title }}&url={{ page.url | prepend: site.domain }}&via=pixelyunicorn&hashtags={% for tag in page.tags %}{{ tag }},{% endfor %}" target="_blank" class="button uno"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>
-      <a id="edit-github" href="https://github.com/{{ site.github }}/blob/{{ site.branch }}/{{ page.path }}" target="_blank" class="button uno" ><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> View on GitHub</a>
-      <a id="edit-glitch" href="https://glitch.com/edit/#!/{{ site.glitch }}?path={{ page.path }}:1:0" target="_blank" class="button uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Remix on Glitch</a>
+      <a id="share-twitter" href="http://twitter.com/share?text={{ page.title }}&url={{ page.url | prepend: site.domain }}&via=pixelyunicorn&hashtags={% for tag in page.tags %}{{ tag }},{% endfor %}" target="_blank" rel="noreferrer" class="button uno"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>
+      <a id="edit-github" href="https://github.com/{{ site.github }}/blob/{{ site.branch }}/{{ page.path }}" target="_blank" rel="noreferrer" class="button uno" ><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> View on GitHub</a>
+      <a id="edit-glitch" href="https://glitch.com/edit/#!/{{ site.glitch }}?path={{ page.path }}:1:0" target="_blank" rel="noreferrer" class="button uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Remix on Glitch</a>
     </p>
     {% include patreon-beg.html %}
     <h3>More Posts</h3>
