--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -10,20 +10,28 @@
 }
 
 .uno {
-  background-color: rgba($uno, .2);
-  color: $uno;
-  border-color: $uno;
+  background-color: lighten(rgba($zeo, .2), 15%);
+  color: darken($zeo, 20%);
+  border-color: $zeo;
+}
+
+@include color-scheme(dark) {
+  .uno {
+    background-color: ($uno, .2);
+    color: darken($uno, 20%);
+    border-color: $uno;
+  }
 }
 
 .duo {
   background-color: rgba($duo, .2);
-  color: $duo;
+  color: darken($duo, 10%);
   border-color: $duo;
 }
 
 .tre {
   background-color: rgba($tre, .2);
-  color: $tre;
+  color: darken($tre, 10%);
   border-color: $tre;
 }
 
