Revert "reduce all external requests, maybe better performance?"
This reverts commit 1161e8f29a8408e9cf2523875b9742a8d3824912.

--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -14,4 +14,7 @@
     pointer-events: none;
     opacity: .3333333333333333333333333333333333333333333333333333333;
   }
+  svg {
+    vertical-align: bottom;
+  }
 }
