--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -9,19 +9,19 @@
   }
 }
 
-.uno {
-  background-color: lighten(rgba($zeo, .2), 15%);
-  color: darken($zeo, 20%);
-  border-color: $zeo;
-}
+// .uno {
+//   background-color: lighten(rgba($zeo, .2), 15%);
+//   color: darken($zeo, 20%);
+//   border-color: $zeo;
+// }
 
-@include color-scheme(dark) {
+// @include color-scheme(dark) {
   .uno {
     background-color: rgba($uno, .2);
     color: darken($uno, 20%);
     border-color: $uno;
   }
-}
+// }
 
 .duo {
   background-color: rgba($duo, .2);
